Remove old schedules

--- a/src/main/resources/templates/error_.html
+++ b/src/main/resources/templates/error_.html
@@ -13,5 +13,8 @@
     <p th:if="${message != null}">
         Technical information: <span th:text="${message}"></span>
     </p>
+    <p th:if="${smessage != null}">
+        Technical information: <span th:text="${smessage}"></span>
+    </p>
 </body>
 </html>
